--- a/src/common/Integration.Infrastructure/Integration.Infrastructure.csproj
+++ b/src/common/Integration.Infrastructure/Integration.Infrastructure.csproj
@@ -15,9 +15,11 @@
       <PackageReference Include="DotNetCore.CAP" Version="6.2.1" />
       <PackageReference Include="DotNetCore.CAP.Dashboard" Version="6.2.1" />
       <PackageReference Include="DotNetCore.CAP.InMemoryStorage" Version="6.2.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
       <PackageReference Include="Mapster" Version="7.3.0" />
       <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
       <PackageReference Include="Savorboard.CAP.InMemoryMessageQueue" Version="6.0.0" />
     </ItemGroup>
 
